<resources>
    <string-array name="eq_names">
        <item>AUTO</item>
        <item>BASSBOOST</item>
        <item>ACOUSTIC</item>
        <item>60\'s</item>
        <item>CLASSICAL</item>
        <item>DUBSTEP</item>
        <item>ELECTRONIC</item>
        <item>FLAT</item>
        <item>HIPHOP</item>
        <item>HOUSE</item>
        <item>JAZZ</item>
        <item>LOUD</item>
        <item>MUSIC</item>
        <item>PARTY</item>
        <item>POP</item>
        <item>REGGAE</item>
        <item>ROCK</item>
        <item>SOFT</item>
        <item>TREBLE</item>
        <item>VOCALS</item>
        <item>R &amp; B</item>
        <item>METAL</item>
    </string-array>
    <string name="app_name">Boom</string>
    <string name="all_songs">All Songs</string>
    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="album">Album</string>
    <string name="artists">Artists</string>
    <string name="playlists">Playlists</string>
    <string name="genres">Genres</string>
    <string name="new_playlist">New Playlist</string>
    <string name="recently_played">Recently played</string>
    <string name="up_next">Up Next</string>
    <string name="added_to_playlist">Added to playlist</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="search_hint">Search</string>
    <string name="storage_permission">SD Card Read/Write Permission</string>
    <string name="account_permission">"This app needs to access your Google account (via Contacts)."</string>
    <string name="ok">OK</string>
    <string name="req_intensity">3D needs Intensity to be ON</string>
    <string name="req_equlaizer">3D needs Equalizer to be ON</string>
    <string name="title_headphone_type">Select Headphone type</string>
    <string name="on_ear">On Ear</string>
    <string name="in_canal">In Canal</string>
    <string name="over_ear">Over Ear</string>
    <string name="timer_start">START TIMER</string>
    <string name="timer_cancel">CANCEL TIMER</string>
    <string name="timer_reset">CLOSE</string>
    <string name="cloud_services">Cloud Services</string>
    <string name="cloud_setting_dropbox_subtitle">Tap to add Dropbox account</string>
    <string name="cloud_setting_google_subtitle">Tap to add Google Drive account</string>
    <string name="title_sleep_timer">Sleep Timer</string>
    <string name="sleep_timer_description">Set a sleep timer to turn off music automatically after a set amount of time.</string>
    <string name="sleep_timer_description_active">Your sleep timer is ON. \n Music will stop playing at </string>
    <string name="invalid_timer_entry">Enter valid sleep interval.</string>
    <string name="header_about">About</string>
    <string name="version">v1.0</string>
    <string name="description_about">Delightful Surround Sound Engineered by \n Global Delight</string>
    <string name="rate_app">Rate on Play Store</string>
    <string name="about_technology">The Technology of immersive surround audio on \n headphones is patent pending.</string>
    <string name="copyright">\u00a9 2017, Global Delight Technologies Pvt Ltd. \n All rights reserved.</string>
    <string name="tutorial_use_headphones">Use Headphones for the \n best experience</string>
    <string name="clear">Clear</string>
    <string name="cant_play_song">Song can\'t be played!</string>
    <string name="favourite_list">Favorites</string>
    <string name="song">Song</string>
    <string name="no_song">No Song Selected.</string>
    <string name="boom_playlist">Boom Playlist</string>
    <string name="playlist_created">Playlist created.</string>
    <string name="playlist_deleted">Playlist deleted.</string>
    <string name="txt_undo">UNDO</string>
    <string name="dialog_txt_cancel">CANCEL</string>
    <string name="added_to_favorite">Added as favorite.</string>
    <string name="playing_added_to_favorite">Playing Song added as favorite.</string>
    <string name="removed_from_favorite">Removed from favorite.</string>
    <string name="playing_removed_from_favorite">Playing Song removed from favorite.</string>
    <string name="no_music_placeholder_txt">No music found.</string>
    <string name="menu_play_next">Play next</string>
    <string name="menu_shuffle">Shuffle</string>
    <string name="menu_add_upnext">Add to up next</string>
    <string name="menu_add_boom_playlist">Add to playlist</string>
    <string name="menu_add_songs">Add Songs</string>
    <string name="menu_add_boom_fav">Add to favorites</string>
    <string name="menu_remove_boom_fav">Remove from favorites</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="menu_remove_boom_item">Remove song</string>
    <string name="network_error">No network connection available.</string>
    <string name="error_fetch_data">Error to fetch data</string>
    <string name="title_item_detail">Item Title Detail</string>
    <string name="title_activity_child">Title Activity Child</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="eq_dialog_title">Choose Equalizer</string>
    <string name="speaker_dialog_title">Speakers</string>
    <string name="done">DONE</string>
    <string name="on">Effects ON</string>
    <string name="off">Effects OFF</string>
    <string name="effect">Effect&#160;</string>
    <string name="three_d_surround">3D Surround</string>
    <string name="fullbass">Full Bass</string>
    <string name="intensity">Intensity</string>
    <string name="equalizer">Equalizer</string>
    <string name="music_library">Music Library</string>
    <string name="drop_box">Dropbox</string>
    <string name="drop_box_account">Dropbox(%s)</string>
    <string name="google_drive">Google Drive</string>
    <string name="google_drive_account">Google Drive(%s)</string>
    <string name="request_cancelled">Request cancelled.</string>
    <string name="login_problem_dropbox">Not able to login in Dropbox</string>
    <string name="login_problem_google_drive">Not able to login in Google Drive</string>
    <string name="loading_problem">Loading Failed.</string>
    <string name="more">&#160;MORE</string>
    <string name="dropbox_authenticate_problem">Couldn\'t authenticate with Dropbox:</string>
    <string name="google_drive_loading_error">Loading Error in Google Drive:\n</string>
    <string name="empty_list">List is empty.</string>
    <string name="require_google_play_service">This app requires Google Play Services. Please install Google Play Services on your device and relaunch this app.</string>
    <string name="remaning">&#160;remaining.</string>
    <string name="network_alart">NetworkCalls Alert</string>
    <string name="check_network">Please check your network connection and try again</string>
    <string name="app_expire">App Expired!</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="store_page_header">Hassle free Boomin\'</string>
    <string name="store_page_buy_description">Buy now to #FeelYourMusic \n without any hassle.</string>
    <string name="store_page_buy_share_description">Buy or Share now to #FeelYourMusic \n without any hassle.</string>
    <string name="store_page_share_description">You may also share Boom to discontinue ads \n for 5 days.</string>
    <string name="share_title">Share Boom</string>
    <string name="menu_restore">Restore Purchase</string>
    <string name="store_title">Store</string>
    <string name="after_purchase_store_page_header">Happy Boomin\'!</string>
    <string name="after_purchase_store_page_buy_description">Congratulations!You can now\n listen to your music the way it \n was intended!</string>
    <string name="after_purchase_buy_button">Purchased</string>
    <string name="title_share">Share</string>
    <string name="message_share">Enjoying Boom? Share with your friends and spread the word!</string>
    <string name="playstore_link">https://play.google.com/store/apps/details?id=com.globaldelight.boom  \n\n</string>
    <string name="share_desc">\nLet me recommend you this application\n\n</string>
    <string name="choose_share">Choose one</string>
    <string name="title_feedback">Feedback</string>
    <string name="library_switch_effect_screen_tooltip">Tap here to quickly open \n Boom Effects</string>
    <string name="effect_player_tooltip">Tap to turn Effects On/Off</string>
    <string name="switch_effect_screen_tooltip">Tap here to switch to\n Boom Effects</string>
    <string name="use_headphone_tooltip">Use Headphones for \nbest experience</string>
    <string name="choose_headphone_tooltip">Choose headphone type \nin Settings for best output</string>
    <string name="onboard_screen_0_main_tx">Redefine Your Music Experience</string>
    <string name="onboard_screen_0_sub_tx">Feel your music coming alive with the magical 3D surround sound.</string>
    <string name="onboard_screen_1_main_tx">Pump-up Your Music</string>
    <string name="onboard_screen_1_sub_tx">Enjoy more control on your music with the professional and intuitive equalizer presets.</string>
    <string name="onboard_screen_2_main_tx">Optimized for All Headphones</string>
    <string name="onboard_screen_2_sub_tx">Select your “Headphone Type” from app “Settings” to bring your favorite music to life.</string>
    <string name="onboard_screen_3_main_tx">All Your Music at One Place</string>
    <string name="onboard_screen_3_sub_tx">Listen to music from your music library, Google Drive and Dropbox on the go.</string>
    <string name="skip_text">Skip</string>
    <string name="start_boomin">Start Boomin\'</string>
    <string name="next">Next</string>
    <string name="loading">Loading...</string>
    <string name="inapp_process_error">Error while InApp Purchase!</string>
    <string name="inapp_process_success">Purchase Success.</string>
    <string name="inapp_process_restore">Purchase Restored.</string>
    <string name="share_button">SHARE NOW</string>
    <string name="continue_button">Continue</string>
    <string name="dialog_title">Like it? Share it!</string>
    <string name="sub_email_header">Don\'t Stop Boomin\'</string>
    <string name="sub_email_text">Share your e-mail ID and continue to #FeelYourMusic</string>
    <string name="email_text_hint">email for promotions</string>
    <string name="submit">SUBMIT</string>
    <string name="buy_button">BUY NOW</string>
    <string name="expire_header_text">Ad free usage expired!</string>
    <string name="expire_text">Your ad free usage session has expired. Buy now to #FeelYourMusic without ads.</string>
    <string name="internet_off_header">Somethin\' doesn\'t sound right   </string>
    <string name="internet_off_discription">Boom Audio Effects get locked without internet connection. Turn on WiFi or Mobile Data to enjoy them all.Alternatively, you may BUY BOOM to unlock all features and #FeelYourMusic hassle-free.
  </string>
    <string name="all_speakers_off">All speakers are off.</string>
    <string name="some_speakers_off">Some speakers are off.</string>
    <string name="boom_playlist_empty_placeholder_txt">You have not created \n any playlists yet.</string>
    <string name="favorite_empty_placeholder_txt">You have not liked \n any songs yet.</string>
    <string name="cloud_configure_placeholder_txt">No accounts configured yet. \nConfigure accounts in Settings to \naccess songs.</string>
    <string name="playlist_track_already_added">Song already added in the playlist.</string>
    <string name="title_settings">Settings</string>
    <string name="settings_button">Settings</string>
    <string name="delete_dialog_txt">Do you want to delete "\""%1$s"\"" ?</string>
    <string name="delete_dialog_title">Delete Playlist</string>
    <string name="share_pop_up_text">Share Boom with your loved ones,\n and #FeelYourMusic without ads \n for 5 days</string>
</resources>