<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/collection_shuffle_item"
        android:title="@string/menu_shuffle"/>
    <item
        android:id="@+id/collection_play_next_item"
        android:title="@string/menu_play_next"/>
    <item
        android:id="@+id/collection_add_to_queue_item"
        android:title="@string/menu_add_upnext" />
    <item
        android:id="@+id/collection_add_to_playlist_item"
        android:title="@string/menu_add_boom_playlist"/>

    <item
        android:id="@+id/playlist_rename_item"
        android:title="@string/rename"/>

    <item
        android:id="@+id/playlist_delete_item"
        android:visible="false"
        android:title="@string/delete"/>
</menu>