<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/music_library"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/music_library" />
        <item
            android:id="@+id/google_drive"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/google_drive" />
        <item
            android:id="@+id/drop_box"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/drop_box" />
        <item
            android:id="@+id/boom_palylist"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/boom_playlist" />
        <item
            android:id="@+id/favourite_list"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/favourite_list" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/title_settings" />
            <item
                android:id="@+id/nav_store"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/store_title" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/title_share" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/header_about" />
        </menu>
    </item>

</menu>
