<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/popup_add_queue"
        android:title="@string/menu_add_upnext"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/popup_add_playlist"
        android:title="@string/menu_add_boom_playlist"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/popup_add_song"
        android:title="@string/menu_add_songs"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/popup_playlist_rename"
        android:title="@string/rename"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/popup_playlist_delete"
        android:title="@string/delete"
        android:showAsAction="ifRoom" />
</menu>