<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/song_play_next_item"
        android:icon="@drawable/ic_menu_selected"
        android:title="@string/menu_play_next"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/song_add_queue_item"
        android:icon="@drawable/ic_menu_selected"
        android:title="@string/menu_add_upnext"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/song_add_playlist_item"
        android:icon="@drawable/ic_menu_selected"
        android:title="@string/menu_add_boom_playlist"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/song_add_fav_item"
        android:icon="@drawable/ic_menu_selected"
        android:title="@string/menu_add_boom_fav"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/song_delete_item"
        android:icon="@drawable/ic_menu_selected"
        android:title="@string/menu_remove_boom_item"
        android:showAsAction="ifRoom" />
</menu>