<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/popup_song_play_next"
        android:icon="@drawable/ic_menu_selected"
        android:title="@string/menu_play_next"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/popup_song_add_queue"
        android:icon="@drawable/ic_menu_selected"
        android:title="@string/menu_add_upnext"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/popup_song_add_playlist"
        android:icon="@drawable/ic_menu_selected"
        android:title="@string/menu_add_boom_playlist"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/popup_song_add_fav"
        android:icon="@drawable/ic_menu_selected"
        android:title="@string/menu_add_boom_fav"
        android:showAsAction="ifRoom" />
</menu>