<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/app_background">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/about_title_padding_top"
        android:weightSum="100"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="35">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_boom_about_icon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.globaldelight.boom.ui.widgets.RegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="4dp"
                android:text="@string/title_about"
                android:textColor="@color/white"
                android:textSize="@dimen/about_title"
                android:typeface="normal" />

            <com.globaldelight.boom.ui.widgets.RegularTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="left|bottom"
                android:paddingLeft="4dp"
                android:text="@string/version"
                android:textColor="@color/glowyellow"
                android:typeface="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:gravity="center"
            android:orientation="vertical">
            <com.globaldelight.boom.ui.widgets.RegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_about"
                android:gravity="center"
                android:textColor="@color/about_company_color"
                android:textSize="@dimen/grid_item_desc_size"
                android:typeface="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="27">
            <com.globaldelight.boom.ui.widgets.RegularButton
                android:id="@+id/btn_rate_app"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_app"
                android:textColor="@color/rate_btn_blue"
                android:textSize="@dimen/rate_btn_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="9">
            <com.globaldelight.boom.ui.widgets.RegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_technology"
                android:textColor="@color/about_company_color"
                android:textSize="@dimen/about_copyright_txt_size" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/black_shade" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="9">
            <com.globaldelight.boom.ui.widgets.RegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/copyright"
                android:textColor="@color/about_company_color"
                android:textSize="@dimen/about_copyright_txt_size" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
</LinearLayout>